# meetgrow-office-assistant

./: .gitignore  README.md  README_zh.md  SKILL.md  _summary.py  coverage_report.txt  environment.yml  fix_remaining.py  fix_tests.py  full_check.py  publish_skill.py  pyproject.toml  quick_check.ps1  quick_status.ps1  requirements.txt  run_all.py  run_all_tests.py  run_fast.py  run_tests.py  upload_to_modelscope.py
docs/: article_for_modelscope.md  tech_article.md
examples/: demo_card_ocr.py  demo_complete_agent.py  demo_meeting_minutes.py  demo_voice_assistant.py
meetgrow_skill/: __init__.py  __main__.py  config.py  skill.py
meetgrow_skill/core/: __init__.py  agent.py  memory.py  orchestrator.py
meetgrow_skill/tools/: __init__.py  asr_tool.py  base.py  doc_tool.py  ocr_tool.py  tts_tool.py
scripts/: download_models.py
server/: client.py  server.py
skills/meetgrow-office-assistant/: SKILL.md
skills/meetgrow-office-assistant/scripts/: card_ocr.py  meeting_minutes.py  voice_assistant.py
tests/: __init__.py  test_agent.py  test_asr.py  test_base.py  test_cli.py  test_config.py  test_doc.py  test_integration.py  test_memory.py  test_ocr.py  test_orchestrator.py  test_skill.py  test_tts.py
